Remove unused IndexServer and index classes; update launch configuration for ValidacaoPessoa

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ValidacaoPessoa",
+            "request": "launch",
+            "mainClass": "com.mycompany.validacaopessoa.ValidacaoPessoa",
+            "projectName": "ValidacaoPessoa"
+        },
+        {
+            "type": "java",
             "name": "Saudacao",
             "request": "launch",
             "mainClass": "Saudacao",
