--- a/BancoDeDados/.vscode/settings.json
+++ b/BancoDeDados/.vscode/settings.json
@@ -3,5 +3,18 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
+    ],
+    "sqltools.connections": [
+        {
+            "ssh": "Disabled",
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "PostGre",
+            "database": "Mercado",
+            "username": "postgres",
+            "password": ""
+        }
     ]
 }
